# crystal

./: .clang-format  BUILD.bazel  WORKSPACE
crystal/: BUILD.bazel  config.hpp  crystal.hpp
crystal/common/: BUILD.bazel  config.hpp  context_helpers.inl  context_methods.inl  pipeline_desc.hpp  render_pass_desc.hpp  texture_desc.hpp
crystal/common/proto/: BUILD.bazel  library.proto  proto.hpp
crystal/compiler/: BUILD.bazel  main.cpp  test.crystal
crystal/compiler/ast/: BUILD.bazel  module.cpp  module.hpp
crystal/compiler/ast/decl/: BUILD.bazel  all.hpp  declaration.hpp  fragment_declaration.cpp  fragment_declaration.hpp  pipeline_declaration.cpp  pipeline_declaration.hpp  struct_declaration.hpp  vertex_declaration.cpp  vertex_declaration.hpp
crystal/compiler/ast/expr/: BUILD.bazel  all.hpp  bin_op_expression.hpp  call_expression.cpp  call_expression.hpp  expression.hpp  float_expression.hpp  identifier_expression.hpp  integer_expression.hpp  parenthesis_expression.hpp  property_expression.hpp  un_op_expression.hpp
crystal/compiler/ast/output/: BUILD.bazel  glsl.hpp  metal.cpp  metal.hpp  print.hpp
crystal/compiler/ast/stmt/: BUILD.bazel  all.hpp  assignment_statement.cpp  assignment_statement.hpp  expression_statement.hpp  return_statement.cpp  return_statement.hpp  statement.hpp  variable_statement.cpp  variable_statement.hpp
crystal/compiler/ast/type/: BUILD.bazel  all.hpp  struct_type.hpp  type.hpp
crystal/compiler/cli/: BUILD.bazel  main.cpp  test.crystal
crystal/compiler/parser/: BUILD.bazel  grammar.lemon  lexer.cpp  lexer.hpp  parse.cpp  parse.hpp  token.hpp
crystal/concepts/: BUILD.bazel  context.hpp
crystal/interface/: BUILD.bazel  command_buffer.inl  context.inl  index_buffer.inl  library.inl  mesh.inl  pipeline.inl  render_pass.inl  texture.inl  uniform_buffer.inl  vertex_buffer.inl
crystal/math/: BUILD.bazel  math.hpp
crystal/metal/: BUILD.bazel  command_buffer.hpp  command_buffer.mm  context.hpp  context.mm  index_buffer.hpp  index_buffer.mm  library.hpp  library.mm  mesh.hpp  mesh.mm  mtl.hpp  pipeline.hpp  pipeline.mm  render_pass.hpp  render_pass.mm  texture.hpp  texture.mm  uniform_buffer.hpp  uniform_buffer.mm  vertex_buffer.hpp  vertex_buffer.mm
crystal/opengl/: BUILD.bazel  command_buffer.cpp  command_buffer.hpp  context.cpp  context.hpp  gl.hpp  gl_error.inl  index_buffer.cpp  index_buffer.hpp  library.cpp  library.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp
crystal/vulkan/: BUILD.bazel  command_buffer.cpp  command_buffer.hpp  context.cpp  context.hpp  index_buffer.cpp  index_buffer.hpp  library.cpp  library.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vk.hpp  vk_error.inl
crystal/vulkan/internal/: frame.cpp  frame.hpp  swapchain.cpp  swapchain.hpp
examples/01_triangle/: BUILD.bazel  main.cpp  scene.hpp  shader.crystal  state.hpp  view.hpp
examples/02_depth_test/: BUILD.bazel  main.cpp  scene.hpp  shader.crystal  state.hpp  view.hpp
examples/02_instances/: BUILD.bazel  main.cpp  scene.hpp  shader.crystal  state.hpp  view.hpp
examples/03_depth_test/: BUILD.bazel  main.cpp  scene.hpp  view.hpp
examples/03_render_to_texture/: BUILD.bazel  main.cpp  scene.hpp  shader.crystal  view.hpp
examples/04_render_to_texture/: BUILD.bazel  main.cpp  scene.hpp  state.hpp  view.hpp
examples/04_shadow_map/: BUILD.bazel  main.cpp  scene.hpp  shader.crystal  view.hpp
examples/05_shadow_map/: BUILD.bazel  main.cpp  scene.hpp  shader.crystal  state.hpp  view.hpp
examples/base/: BUILD.bazel  controller.cpp  controller.hpp  default_engine.inl  engine.hpp  scene.hpp  window.cpp  window.hpp
examples/base/glfw/: window.cpp  window.hpp
examples/base/sdl/: window.cpp  window.hpp
examples/depth_test/: BUILD.bazel  depth_test_view.hpp  main.cpp  scene.hpp  shader.crystal  state.hpp  view.hpp
examples/depth_test/shaders/: BUILD.bazel  depth_test.frag.glsl  shader.metal
examples/render_texture/: BUILD.bazel  main.cpp  render_texture_view.hpp
examples/render_texture/shaders/: BUILD.bazel  combine.frag.glsl  combine.vert.glsl  cube.vert.glsl  quad.frag.glsl  quad.vert.glsl  shader.metal
examples/render_to_texture/: BUILD.bazel  main.cpp  scene.hpp  shader.crystal  state.hpp  view.hpp
examples/render_to_texture/shaders/: cube.vert.glsl
examples/triangle/: BUILD.bazel  main.cpp  scene.hpp  shader.crystal  state.hpp  triangle_view.hpp  view.hpp
examples/triangle/shaders/: BUILD.bazel  shader.crystal  shader.metal  shader.vert.glsl  triangle.crystal
tools/: cc.bzl  crystal.bzl  lemon.bzl  metal.bzl  repo.bzl  spv.bzl  vulkan.bzl
util/bits/: bit_flag.hpp
util/fs/: BUILD.bazel  path.hpp  tmp.cpp
util/memory/: ref_count.hpp
util/net/: BUILD.bazel  client.hpp  network.cpp  network.hpp  server.hpp
util/proc/: proc.cpp
util/unsafe/: BUILD.bazel  deferred_ctor.hpp
