load("//tools:cc.bzl", "cc_library")

cc_library(
    name = "crystal",
    visibility = [
        "//visibility:public",
    ],
    deps = select({
        "@//:windows": [
            "//crystal/opengl:opengl_sdl2",
            # "//crystal/vulkan:vulkan_sdl2",
        ],
        "@//:macos": [
            "//crystal/opengl:opengl_sdl2",
            "//crystal/metal:metal_sdl2",
        ],
    }) + [
        ":include",
    ],
)

cc_library(
    name = "include",
    hdrs = [
        "crystal.hpp",
    ],
    defines = select({
        "//:opt": [
            "CRYSTAL_RELEASE",
        ],
        "//conditions:default": [],
    }),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//crystal/concepts",
    ],
)

cc_library(
    name = "config",
    hdrs = [
        "config.hpp",
    ],
    visibility = [
        "//visibility:public",
    ],
)
