load("//tools:cc.bzl", "cc_library")

cc_library(
    name = "crystal",
    hdrs = [
        "crystal.hpp",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = select({
        "@//:windows": [
            "//crystal/opengl:opengl",
            "//crystal/vulkan:vulkan",
        ],
        "@//:macos": [
            "//crystal/opengl:opengl",
            "//crystal/metal:metal",
        ],
    }),
)

cc_library(
    name = "crystal_sdl2",
    hdrs = [
        "crystal.hpp",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = select({
        "@//:windows": [
            "//crystal/opengl:opengl_sdl2",
            "//crystal/vulkan:vulkan_sdl2",
        ],
        "@//:macos": [
            "//crystal/opengl:opengl_sdl2",
            "//crystal/metal:metal_sdl2",
        ],
    }),
)

cc_library(
    name = "crystal_glfw",
    hdrs = [
        "crystal.hpp",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = select({
        "@//:windows": [
            "//crystal/opengl:opengl_glfw",
            "//crystal/vulkan:vulkan_glfw",
        ],
        "@//:macos": [
            "//crystal/opengl:opengl_glfw",
            # "//crystal/metal:metal_glfw",
        ],
    }),
)

cc_library(
    name = "crystal_sdl2_glfw",
    hdrs = [
        "crystal.hpp",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = select({
        "@//:windows": [
            "//crystal/opengl:opengl_sdl2_glfw",
            "//crystal/vulkan:vulkan_sdl2_glfw",
        ],
        "@//:macos": [
            "//crystal/opengl:opengl_sdl2_glfw",
            "//crystal/metal:metal_sdl2",
        ],
    }),
)

cc_library(
    name = "include",
    hdrs = [
        "crystal.hpp",
    ],
    defines = select({
        "//:opt": [
            "CRYSTAL_RELEASE",
        ],
        "//conditions:default": [],
    }),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//crystal/concepts",
    ],
)

cc_library(
    name = "config",
    hdrs = [
        "config.hpp",
    ],
    visibility = [
        "//visibility:public",
    ],
)
