load("//tools:cc.bzl", "objc_library")

objc_library(
    name = "metal",
    srcs = glob([
        "*.mm",
    ]),
    hdrs = glob([
        "*.hpp",
    ]),
    defines = select({
        "//:opt": [
            "CRYSTAL_RELEASE",
            "CRYSTAL_USE_METAL",
        ],
        "//conditions:default": [
            "CRYSTAL_USE_METAL",
        ],
    }),
    sdk_frameworks = [
        "Metal",
        "QuartzCore",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//crystal:config",
        "//crystal/common",
        "//crystal/common/proto",
        "@com_google_absl//absl/container:inlined_vector",
        "@mundane//util/fs",
        "@mundane//util/memory",
        "@mundane//util/msg",
        "@sdl2//:sdl2_hdrs",
    ],
)

objc_library(
    name = "metal_sdl2",
    srcs = glob([
        "*.mm",
    ]),
    hdrs = glob([
        "*.hpp",
    ]),
    defines = select({
        "//:opt": [
            "CRYSTAL_RELEASE",
            "CRYSTAL_USE_METAL",
            "CRYSTAL_USE_SDL2",
        ],
        "//conditions:default": [
            "CRYSTAL_USE_METAL",
            "CRYSTAL_USE_SDL2",
        ],
    }),
    sdk_frameworks = [
        "Metal",
        "QuartzCore",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//crystal:config",
        "//crystal/common",
        "//crystal/common/proto",
        "//third_party/glad:gl42",
        "@com_google_absl//absl/container:inlined_vector",
        "@mundane//util/fs",
        "@mundane//util/memory",
        "@mundane//util/msg",
        "@sdl2//:sdl2_hdrs",
    ],
)
