load("//tools:cc.bzl", "cc_library")

cc_library(
    name = "opengl",
    srcs = glob([
        "*.cpp",
    ]),
    hdrs = glob([
        "*.hpp",
        "*.inl",
    ]),
    defines = select({
        "//:opt": [
            "CRYSTAL_RELEASE",
            "CRYSTAL_USE_OPENGL",
        ],
        "//conditions:default": [
            "CRYSTAL_USE_OPENGL",
        ],
    }),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//crystal/common",
        "//crystal/common/proto",
        "//third_party/glad:gl41",
        "//util/fs",
        "//util/memory",
        "//util/msg",
        "@com_google_absl//absl/container:inlined_vector",
        "@sdl2//:sdl2_hdrs",
    ],
)

cc_library(
    name = "opengl_sdl2",
    srcs = glob([
        "*.cpp",
    ]),
    hdrs = glob([
        "*.hpp",
        "*.inl",
    ]),
    defines = select({
        "//:opt": [
            "CRYSTAL_RELEASE",
            "CRYSTAL_USE_OPENGL",
            "CRYSTAL_USE_SDL2",
        ],
        "//conditions:default": [
            "CRYSTAL_USE_OPENGL",
            "CRYSTAL_USE_SDL2",
        ],
    }),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//crystal:config",
        "//crystal/common",
        "//crystal/common/proto",
        "//third_party/glad:gl41",
        "//util/fs",
        "//util/memory",
        "//util/msg",
        "@com_google_absl//absl/container:inlined_vector",
        "@sdl2//:sdl2_hdrs",
    ],
)
