load("//tools:cc.bzl", "cc_library")

cc_library(
    name = "base",
    srcs = [
        "controller.cpp",
        "glfw/window.cpp",
        "sdl/window.cpp",
    ],
    hdrs = [
        "controller.hpp",
        "engine.hpp",
        "glfw/window.hpp",
        "scene.hpp",
        "sdl/window.hpp",
    ],
    visibility = [
        "//examples:__subpackages__",
    ],
    deps = [
        "//crystal:crystal_sdl2_glfw",
        "@glfw",
        "@glm",
        "@mundane//util/msg",
        "@sdl2",
    ],
)
