load("//tools:cc.bzl", "cc_binary")

cc_binary(
    name = "opengl",
    srcs = [
        "main.cpp",
        "view.hpp",
    ],
    data = [
        "//examples/render_to_texture/shaders:glsl",
    ],
    deps = [
        "//crystal:include",
        "//crystal/opengl:opengl_sdl2",
        "@glm",
        "@sdl2",
        "@sdl2//:sdl2_main",
    ],
)

cc_binary(
    name = "vulkan",
    srcs = [
        "main.cpp",
        "view.hpp",
    ],
    data = [
        "//examples/render_to_texture/shaders:shader.spv",
    ],
    deps = [
        "//crystal:include",
        "//crystal/vulkan:vulkan_sdl2",
        "@glm",
        "@sdl2",
        "@sdl2//:sdl2_main",
    ],
)

cc_binary(
    name = "metal",
    srcs = [
        "main.cpp",
        "view.hpp",
    ],
    data = [
        "//examples/render_to_texture/shaders:shader.metallib",
    ],
    deps = [
        "//crystal:include",
        "//crystal/metal:metal_sdl2",
        "@glm",
        "@sdl2",
        "@sdl2//:sdl2_main",
    ],
)
