load("//tools:cc.bzl", "cc_binary")

cc_binary(
    name = "opengl",
    srcs = [
        "main.cpp",
        "triangle_view.hpp",
    ],
    data = [
        "//examples/triangle/shaders:glsl",
    ],
    defines = [
        "CRYSTAL_USE_OPENGL=1",
    ],
    deps = [
        "//crystal:include",
        "//crystal/opengl:opengl_sdl2",
        "@glm",
        "@sdl2",
        "@sdl2//:sdl2_main",
    ],
)

cc_binary(
    name = "vulkan",
    srcs = [
        "main.cpp",
        "triangle_view.hpp",
    ],
    data = [
        "//examples/triangle/shaders:shader.spv",
    ],
    defines = [
        "CRYSTAL_USE_VULKAN=1",
    ],
    deps = [
        "//crystal:include",
        "//crystal/vulkan:vulkan_sdl2",
        "@glm",
        "@sdl2",
        "@sdl2//:sdl2_main",
    ],
)
