load("//tools:cc.bzl", "cc_binary")

cc_binary(
    name = "triangle",
    srcs = [
        "main.cpp",
        "scene.hpp",
        "state.hpp",
        "view.hpp",
        "//examples/triangle/shaders:shader.hpp",
    ],
    data = [
        "//examples/triangle/shaders:shader.crystallib",
    ],
    deps = [
        "//crystal:include",
        "//examples/base",
        "@glm",
        "@sdl2",
        "@sdl2//:sdl2_main",
    ],
)

cc_binary(
    name = "opengl",
    srcs = [
        "engine.hpp",
        "main.cpp",
        "view.hpp",
        "//examples/triangle/shaders:shader.hpp",
    ],
    data = [
        "//examples/triangle/shaders:shader.crystallib",
    ],
    defines = [
        "CRYSTAL_USE_OPENGL=1",
    ],
    deps = [
        "//crystal:include",
        "//crystal/opengl:opengl_sdl2",
        "@glm",
        "@sdl2",
        "@sdl2//:sdl2_main",
    ],
)

cc_binary(
    name = "vulkan",
    srcs = [
        "main.cpp",
        "triangle_view.hpp",
    ],
    data = [
        "//examples/triangle/shaders:shader.spv",
    ],
    defines = [
        "CRYSTAL_USE_VULKAN=1",
    ],
    deps = [
        "//crystal:include",
        "//crystal/vulkan:vulkan_sdl2",
        "@glm",
        "@sdl2",
        "@sdl2//:sdl2_main",
    ],
)

cc_binary(
    name = "metal",
    srcs = [
        "main.cpp",
        "triangle_view.hpp",
    ],
    data = [
        "//examples/triangle/shaders:shader.metallib",
    ],
    defines = [
        "CRYSTAL_USE_METAL=1",
    ],
    deps = [
        "//crystal:include",
        "//crystal/metal:metal_sdl2",
        "@glm",
        "@sdl2",
        "@sdl2//:sdl2_main",
    ],
)
