load("//tools:cc.bzl", "cc_library")

cc_library(
    name = "ast",
    srcs = glob([
        "*.cpp",
    ]),
    hdrs = glob([
        "*.hpp",
    ]),
    visibility = [
        "//crystal/compiler:__subpackages__",
    ],
    deps = [
        "//crystal/compiler/ast/decl",
        "//crystal/compiler/ast/expr",
        "//crystal/compiler/ast/stmt",
        "//crystal/compiler/ast/type",
        "//util/memory",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "module_hdr",
    hdrs = glob([
        "*.hpp",
    ]),
    visibility = [
        "//crystal/compiler:__subpackages__",
    ],
)
