load("//tools:cc.bzl", "cc_binary")

cc_binary(
    name = "cli",
    srcs = [
        "main.cpp",
    ],
    copts = [
        "/EHsc",
    ],
    data = [
        "test.crystal",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//crystal/compiler/ast",
        "//crystal/compiler/parser",
        "//third_party/cli11",
    ],
)
