load("//tools:cc.bzl", "cc_binary")

cc_binary(
    name = "cli",
    srcs = [
        "main.cpp",
    ],
    copts = [
        "/EHsc",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//crystal/common/proto",
        "//crystal/compiler/ast",
        "//crystal/compiler/parser",
        "//third_party/cli11",
    ],
)
