load("//tools:cc.bzl", "cc_binary")

cc_binary(
    name = "cli",
    srcs = [
        "main.cpp",
    ],
    copts = select({
        "@//:windows": [
            "/EHsc",
        ],
        "//conditions:default": [],
    }),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//crystal/common/proto",
        "//crystal/compiler/ast",
        "//crystal/compiler/parser",
        "//third_party/cli11",
    ],
)
