load("//tools:cc.bzl", "cc_library")
load("//tools:lemon.bzl", "lemon_cpp_library")

cc_library(
    name = "parser",
    srcs = glob([
        "*.cpp",
    ]) + [
        ":grammar.hpp",
        ":grammar.cpp",
    ],
    hdrs = glob([
        "*.hpp",
    ]),
    visibility = [
        "//crystal/compiler:__subpackages__",
    ],
    deps = [
        "//crystal/compiler/ast",
        "@com_google_absl//absl/container:flat_hash_map",
        "@mundane//util/fs",
        "@mundane//util/memory",
    ],
)

lemon_cpp_library(
    name = "grammar",
    src = "grammar.lemon",
)
