load("//tools:spv.bzl", "spv_fragment", "spv_library", "spv_vertex")
load("//tools:metal.bzl", "metal_library")

filegroup(
    name = "glsl",
    srcs = glob([
        "*.glsl",
    ]),
    visibility = [
        "//examples/depth_test:__subpackages__",
    ],
)

spv_vertex(
    name = "depth_test_vert",
    src = "depth_test.vert.glsl",
    entry = "depth_test_vert",
)

spv_fragment(
    name = "depth_test_frag",
    src = "depth_test.frag.glsl",
    entry = "depth_test_frag",
)

spv_library(
    name = "shader_spv",
    srcs = [
        ":depth_test_frag",
        ":depth_test_vert",
    ],
    out = "shader.spv",
    visibility = [
        "//examples/depth_test:__subpackages__",
    ],
)

metal_library(
    name = "shader_metal",
    srcs = [
        "shader.metal",
    ],
    out = "shader.metallib",
    visibility = [
        "//examples/depth_test:__subpackages__",
    ],
)
